methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:8: error: Unmatched closing brace '}' ignored here
    } else {
    ^SlugTracking:8: error: ';' expected but 'else' found.
    } else {
      ^